<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <ImageView
                android:id="@+id/img_movie"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:contentDescription="Movie Poster"
                android:elevation="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/the_shawshank_redemption"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/sample_title_movie"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorTextDark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_movie"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/sample_rating_movie"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/img_movie"
                app:layout_constraintStart_toStartOf="@+id/img_movie"
                app:layout_constraintTop_toBottomOf="@+id/img_movie" />

            <ImageView
                android:id="@+id/ic_rating"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="8dp"
                android:contentDescription="Icon Rating"
                android:src="@drawable/ic_stars"
                app:layout_constraintBottom_toBottomOf="@id/txt_rating"
                app:layout_constraintStart_toEndOf="@+id/txt_rating"
                app:layout_constraintTop_toTopOf="@id/txt_rating"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/txt_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/sample_overview_movie"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorTextMedium"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/txt_title"
                app:layout_constraintTop_toBottomOf="@+id/txt_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>